# bla

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  LEARNINGS.md  MISSION.md  Makefile  PLAN.md  PRD.md  README.md  ROADMAP.md  eslint.config.js  index.html  package.json  pill.html  pnpm-lock.yaml  rust-toolchain.toml  settings.html  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  harness-guard.yml  sentinel.yml
.sentinel/reports/: SNTL-20260706-bla-PR29-29617ab.md  SNTL-20260709-bla-PR127-dfbf164.md
changelog.d/: 126-audio-levels.md  126-error-toasts.md  126-launch-cues.md  126-m2-windows-scaffold.md  126-pill-waveform.md  126-settings-general.md  126-sound-cues.md  128.md  160-store-foundation.md  176.md  179-waveform-scaling.md  180.md  181-hotkey-capture-suppress.md  182.md  183-settings-autoapply.md  184-model-size.md  187-hotkey-apply-button.md  197.md  198.md  199.md  200.md  201.md  202.md  203.md  205.md  208.md  209.md  210.md  221.md  246.md  256.md  257.md  258.md  259.md  260.md  261.md  262.md  263.md  281.md  282.md  (+3 more)
docs/: ARCHITECTURE.md  DEVELOPMENT-WORKFLOW.md  SENTINEL.md  TESTING-STRATEGY.md
src/: App.tsx  testUtils.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: pill.json  settings.json
src-tauri/prompts/: cleanup_v1.txt  cleanup_v2.txt  cleanup_v3.txt  cleanup_v4.txt  command_v1.txt  command_v2.txt
src-tauri/src/: audio.rs  cleanup.rs  command.rs  commands.rs  context.rs  errors.rs  hotkeys.rs  lib.rs  main.rs  models.rs  output.rs  pipeline.rs  preamble.rs  settings.rs  snippets.rs  store.rs  stt.rs  tray.rs
src-tauri/tests/: acceptance.rs
src/lib/: baseDir.test.ts  baseDir.ts  features.ts  hotkeyCapture.test.ts  hotkeyCapture.ts  hotkeyChord.test.ts  hotkeyChord.ts  ipc.ts  levelBuffer.test.ts  levelBuffer.ts  pathTemplate.test.ts  pathTemplate.ts  pillState.test.ts  pillState.ts  settingsPatch.test.ts  settingsPatch.ts  soundCue.test.ts  soundCue.ts  soundCuePlayer.ts  status.test.ts  status.ts  toast.test.ts  toast.ts  waveform.test.ts  waveform.ts
src/windows/pill/: PillWaveform.tsx  Toast.tsx  index.test.tsx  index.tsx  listenerHealth.test.ts  listenerHealth.ts  main.tsx
src/windows/settings/: DictionaryTab.test.tsx  DictionaryTab.tsx  GeneralTab.commandModeDisabled.test.tsx  GeneralTab.test.tsx  GeneralTab.tsx  HistoryTab.test.tsx  HistoryTab.tsx  SnippetsTab.test.tsx  SnippetsTab.tsx  ToneTab.test.tsx  ToneTab.tsx  index.test.tsx  index.tsx  main.tsx  tabs.ts
tests/visual/: capture-dictionary-screenshots.py  capture-history-screenshots.py  capture-pill-screenshots.py  capture-screenshots.py  capture-snippets-screenshots.py  capture-tone-screenshots.py  pill-harness.html  pill-harness.tsx  settings-harness.html  settings-harness.tsx
