[package]
name = "bla"
version = "0.1.0"
description = "Local-first, system-wide voice dictation: hold a hotkey, speak, and cleaned text lands at the cursor or in a file — fully on-device."
authors = ["Pedro Fuentes"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bla_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `tray-icon`: the real system-tray/menu-bar surface (issue #110), wired in
# `lib.rs::run()`'s `setup()`. `image-png`: lets `tauri::image::Image::from_bytes`
# decode the bundled placeholder PNGs under `icons/tray/` into the raw RGBA
# `TrayIcon::set_icon` needs.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3.5.1"
cpal = "0.18.1"
regex = "1"
# `cleanup.rs`'s Ollama transport talks plain HTTP to localhost (MISSION §5),
# so it never needed TLS on its own — but `models.rs`'s downloader (AC-12)
# talks HTTPS to huggingface.co, so this single crate-wide dependency now
# enables the `tls` feature (rustls-backed — NOT native-tls, keeping the
# minimal-native-surface posture) on top of the otherwise still-disabled
# defaults (gzip stays off; neither caller needs it).
ureq = { version = "2", default-features = false, features = ["tls"] }
enigo = "0.6.1"
arboard = "3.6.1"
# SHA-256 for model-checksum verification (models.rs, ADR-0004/AC-12) — a
# small, pure-Rust hashing crate with no TLS/native-build surface of its own.
sha2 = "0.10"
# URL parsing for the AC-12 network guard (models.rs). Deliberately the SAME
# crate `ureq` resolves its connect target with (already in the tree via
# ureq — same version), so the host the guard checks can never diverge from
# the host actually dialed (a hand-rolled authority parser could, e.g. on
# `https://evil.com?@huggingface.co`).
url = "2.5"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
# `store.rs`'s history/dictionary/tone-rules/snippets persistence (MISSION
# §5: local SQLite under the OS app-data dir, nothing leaves the device).
# `bundled` compiles SQLite from source via `cc` rather than linking the
# system library, so behavior can't skew across macOS/Windows CI images or
# user machines with an old/missing system SQLite — the standard choice for
# a portable desktop app. `default-features = false` drops rusqlite's
# unrelated defaults (notably the new WASM FFI shim) that a native bundled
# build has no use for; `bundled` is the only feature this crate needs.
rusqlite = { version = "0.40.1", default-features = false, features = [
  "bundled",
] }

[dev-dependencies]
static_assertions = "1.1.0"
tempfile = "3"

[features]
default = []
# Heavy native dep (ADR-0004): whisper-rs builds whisper.cpp (C++) from
# source, which needs cmake/clang and is slow. Default-off so `cargo test`
# (no feature) covers the Stt trait, FakeStt, and the build_initial_prompt
# dictionary-seam logic without paying that build cost or needing a model
# file. Enable with `--features whisper` to build/use the real WhisperStt.
whisper = ["dep:whisper-rs"]

# whisper-rs is optional and only pulled in by the `whisper` feature above.
# Metal acceleration (ADR-0004) is macOS-only; other platforms get the CPU
# backend.
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", optional = true, default-features = false, features = [
  "metal",
] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { version = "0.16", optional = true, default-features = false }

